force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/Dutch_Address_Postcode_Range__c.object-meta.xml
<CustomObject>
    <description>A range specifies a set of house numbers using the fields house_number_from, house_number_to and range_indication.  A range relates to a single postcode, but a postcode may contain multiple ranges.</description>
    <label>Dutch Address Postcode Range</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Dutch Address Postcode Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dutch Address Postcode Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>