force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Cebuco_Code__c.field-meta.xml
<CustomField>
    <fullName>Cebuco_Code__c</fullName>
    <description>Code given by CeBuCo (Centraal Bureau voor Courantenpubliciteit).  Range: ‘0’-’999’</description>
    <label>Cebuco Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>