force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City name in accordance with the municipal administration “Woonplaats” In capitals including punctuation marks.  This field is at most 24 characters in length.  Longer city names are shortened using a custom algorithm.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>