force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/House_Number_To__c.field-meta.xml
<CustomField>
    <fullName>House_Number_To__c</fullName>
    <description>Highest house number of the postcode range.  Between 0 and 99999</description>
    <label>House Number To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>