force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Letter_Combination__c.field-meta.xml
<CustomField>
    <fullName>Letter_Combination__c</fullName>
    <description>Two character letter combination (second part of a postcode).  Range: ‘AA’-’ZZ’</description>
    <label>Letter Combination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>