force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <description>Municipality name in capital letters.  This field is at most 24 characters in length.  Longer municipality names are shortened using a custom algorithm.</description>
    <label>Municipality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>