force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Municipality_Code__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Code__c</fullName>
    <description>Code given for municipalities as defined by the Ministry of Home Affairs ‘Ministerie van binnenlandse zaken’</description>
    <label>Municipality Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>