force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Neighborhood_Code__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Code__c</fullName>
    <description>Four number neighborhood code (first part of a postcode).  Between 1000 and 9999</description>
    <label>Neighborhood Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>