force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Official name of the province, correctly cased and with dashes where applicable.</description>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>