force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Province_Code__c.field-meta.xml
<CustomField>
    <fullName>Province_Code__c</fullName>
    <description>Code of the province, a single letter.</description>
    <label>Province Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>