force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Range_Indication__c.field-meta.xml
<CustomField>
    <fullName>Range_Indication__c</fullName>
    <description>Postcode range type.  Possible values:
’0’	range of odd house numbers
’1’	range of even house numbers</description>
    <label>Range Indication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>