force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <description>Street name in accordance with municipal administration for “OpenbareRuimte” The street name ‘Postbus’ is returned for a range of PO boxes.  In capital and lowercase letters, including punctuation marks.  This field is at most 43 characters in length.  Longer street names are shortened using a custom algorithm.</description>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>