force-app/main/modules/dutchAddress/objects/Dutch_Address_Postcode_Range__c/fields/Street_Name_Nen__c.field-meta.xml
<CustomField>
    <fullName>Street_Name_Nen__c</fullName>
    <description>Street name either the ‘naam’ or the ‘verkorteNaam’ in accordance municipal administration for “OpenbareRuimte”.  Contains ‘Postbus’ for a range of PO boxes.  In capital and lowercase letters, including punctuation marks.  This field is at most 24 characters in length.</description>
    <label>Street Name Nen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>